...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_swipe_indicator">

            <ImageView
                android:id="@+id/image_movie_poster"
                android:layout_width="130dp"
                android:layout_height="195dp"
                android:layout_margin="16dp"
                android:transitionName="posterIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/example_movie_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_released_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_released_duration"
                app:layout_constraintEnd_toEndOf="@+id/text_movie_title"
                app:layout_constraintStart_toStartOf="@+id/text_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_title" />

            <TextView
                android:id="@+id/text_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_genres"
                app:layout_constraintEnd_toEndOf="@+id/text_released_duration"
                app:layout_constraintStart_toStartOf="@+id/text_released_duration"
                app:layout_constraintTop_toBottomOf="@+id/text_released_duration" />

            <ProgressBar
                android:id="@+id/pb_user_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_shape"
                android:indeterminate="false"
...
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                app:layout_constraintStart_toStartOf="@+id/text_released_duration"
                app:layout_constraintTop_toBottomOf="@+id/text_genres" />

            <TextView
                android:id="@+id/text_user_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_vote"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/pb_user_score"
...
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/text_released_duration"
                app:layout_constraintStart_toStartOf="@+id/pb_user_score"
                app:layout_constraintTop_toBottomOf="@+id/pb_user_score" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bookmark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_add_to_bookmark"
                app:icon="@drawable/ic_baseline_bookmark_border_24"
                app:layout_constraintEnd_toEndOf="@+id/text_genres"
                app:layout_constraintStart_toStartOf="@+id/text_genres"
...
